fix: adjust close button position for improved alignment

--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -132,7 +132,7 @@
 .closeButton {
   position: absolute;
   top: 1.7rem;
-  left: 1.3rem;
+  left: 1.1rem;
   color: #ffffff;
   background: none;
   border: none;
